--- a/project2/app/views/posts/show.html.erb
+++ b/project2/app/views/posts/show.html.erb
@@ -1,7 +1,19 @@
 <div>
-  
   <h1><%=@post.title %></h1>
-
   <p><%=@post.content%></p>
-
 </div>
+
+<%= link_to "Edit Post", edit_post_path(@post) %>
+<%= link_to "Delete Post", post_path(@post), method: :delete %>
+<%= link_to "Add new comment", new_post_comment_path(@post) %>
+<%= link_to "Home", posts_path %>
+
+<% @post.comments.each do |comment| %>
+      <div>
+        <p>
+          <%= comment.comment_content %>
+          <%= link_to "Edit", edit_post_comment_path(@post, comment) %>
+          <%= link_to "Delete", post_comment_path(@post, comment), method: :delete %>
+        </p>
+      </div>
+<% end %>
