added devise to post and comments. added devise migrations. Changed seeds

--- a/project2/app/views/posts/edit.html.erb
+++ b/project2/app/views/posts/edit.html.erb
@@ -4,4 +4,5 @@
 <%= render 'form' %>
 <p>
   <%= link_to 'Delete', post_path(@post), method: :delete, class: 'delete' %>
+  <%= link_to "Home", posts_path %>
 </p>
