--- a/project2/app/views/layouts/application.html.erb
+++ b/project2/app/views/layouts/application.html.erb
@@ -9,6 +9,13 @@
   </head>
 
   <body>
+    <% if !current_user %>
+      <%= link_to "Sign up", new_user_registration_path %>
+      <%= link_to "Sign in", new_user_session_path %>
+    <% else %>
+      <%= current_user.email %>
+      <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+<% end %>
     <%= yield %>
   </body>
 </html>
