--- a/project2/app/views/posts/show.html.erb
+++ b/project2/app/views/posts/show.html.erb
@@ -3,19 +3,19 @@
   <p><%=@post.content%></p>
 </div>
 
-<% if current_user %>
+
 <%= link_to "Edit Post", edit_post_path(@post) %>
 <%= link_to "Delete Post", post_path(@post), method: :delete %>
+
 <%= link_to "Add new comment", new_post_comment_path(@post) %>
 <%= link_to "Home", posts_path %>
-<% end %>
 
 
 <% @post.comments.each do |comment| %>
       <div>
         <p>
           <%= comment.comment_content %>
-      <% if current_user %>
+      <% if comment.user == current_user %>
           <%= link_to "Edit", edit_post_comment_path(@post, comment) %>
           <%= link_to "Delete", post_comment_path(@post, comment), method: :delete %>
       <% end %>
