--- a/project2/app/views/posts/_form.html.erb
+++ b/project2/app/views/posts/_form.html.erb
@@ -6,6 +6,9 @@
   <%= f.label :content %>
   <%= f.text_field :content %>
 
+  <%= f.label :category %>
+  <%= select_tag(:category, options_for_select([['Camping', 1], ['Backpacking', 2], ['Dispersed Camping', 3], ['Trails', 4]]) ) %>
+
   <%= f.submit %>
 
 <% end %>
