--- a/project2/app/views/posts/show.html.erb
+++ b/project2/app/views/posts/show.html.erb
@@ -1,24 +1,27 @@
-<div>
+<div class = 'actual_post'>
   <h1><%=@post.title %></h1>
-  <p><%=@post.content%></p>
+  <%=@post.content%>
 </div>
-
-
-<%= link_to "Edit Post", edit_post_path(@post) %>
-<%= link_to "Delete Post", post_path(@post), method: :delete %>
+  <div class="flash_message">
+    <% flash.each do |type, message| %>
+    <p><%= type %>: <%= message %></p>
+    <% end %>
+</div>
 
 <%= link_to "Add new comment", new_post_comment_path(@post) %>
 <%= link_to "Home", posts_path %>
+<% if @post.user == current_user %>
+<%= link_to "Edit Post", edit_post_path(@post) %>
+<%= link_to "Delete Post", post_path(@post), method: :delete %>
+<% end %>
 
 
 <% @post.comments.each do |comment| %>
       <div>
-        <p>
           <%= comment.comment_content %>
+      </div>
       <% if comment.user == current_user %>
           <%= link_to "Edit", edit_post_comment_path(@post, comment) %>
           <%= link_to "Delete", post_comment_path(@post, comment), method: :delete %>
       <% end %>
-        </p>
-      </div>
 <% end %>
