--- a/project2/app/views/posts/index.html.erb
+++ b/project2/app/views/posts/index.html.erb
@@ -7,11 +7,27 @@
 
 
 <%= link_to "Create New Post", new_post_path %>
+
+<h1>Camping Posts</h1>
 <ul>
   <% @posts.each do |post| %>
+    <% if post.category == "Camping" %>
     <li>
-      <%= link_to post.title, post%> || 
+      <%= link_to post.title, post%> ||
       <%= post.category %>
     </li>
+    <% end %>
+  <% end %>
+</ul>
+
+<h1>Backpacking Posts</h1>
+<ul>
+  <% @posts.each do |post| %>
+    <% if post.category == "Backpacking" %>
+    <li>
+      <%= link_to post.title, post%> ||
+      <%= post.category %>
+    </li>
+    <% end %>
   <% end %>
 </ul>
