--- a/project2/app/views/layouts/application.html.erb
+++ b/project2/app/views/layouts/application.html.erb
@@ -13,9 +13,9 @@
       <%= link_to "Sign up", new_user_registration_path %>
       <%= link_to "Sign in", new_user_session_path %>
     <% else %>
-      <%= current_user.email %>
+      <%= link_to current_user.email, user_path(:id => current_user.id) %>
       <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
-<% end %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
