--- a/project2/app/views/comments/new.html.erb
+++ b/project2/app/views/comments/new.html.erb
@@ -1,7 +1,9 @@
+<div id="new_comment_container">
+
 <h2>New Comment</h2>
-
-<%= render 'form' %>
-
-<p>
 <%= link_to "Home", posts_path %>
+<p>
+  <%= render 'form' %>
 </p>
+
+</div>
