--- a/project2/app/views/posts/edit.html.erb
+++ b/project2/app/views/posts/edit.html.erb
@@ -1,8 +1,12 @@
-<h2>Edit Post</h2>
+<div id="edit_container">
+
+<h2 class ="edit_title">Edit Post</h2>
 
 
-<%= render 'form' %>
 <p>
-  <%= link_to 'Delete', post_path(@post), method: :delete, class: 'delete' %>
   <%= link_to "Home", posts_path %>
+  <%= link_to 'Delete', post_path(@post), method: :delete, class: 'delete' %>
 </p>
+<%= render 'form' %>
+
+</div>
