--- a/project2/app/views/users/show.html.erb
+++ b/project2/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<div class = 'profile'>
+<div class="profile">
+<!-- Use no spaces and double quotes in HTML -->
 <h1>Profile Page</h1>
 <%= link_to "Home", posts_path %>
 
